feat: implement initial admin panel with dashboard, car type management, authentication, and related services.

--- a/Admin/src/app/login/login.page.html
+++ b/Admin/src/app/login/login.page.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="content-container">
-    <swiper-container [pagination]="true" [autoplay]="{ delay: 3000 }">
+    <swiper-container pagination="true" autoplay="true" autoplay-delay="3000">
       <swiper-slide>
         <ion-img src="../assets/imgs/main.svg"></ion-img>
       </swiper-slide>
